# letters

./: .editorconfig  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Readme.md  docker-compose.yml  nodemon.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  resolver.js  vite.config.js
.sqlx/: query-f66c70e761e925f800fd4dcaa2be537e2b7d3d65c8d05e6dbb6a8daf206256b6.json
client/: README.md  generate.js  index.html  keyboard.js  package.json  styles.css  themes.css
server/: Cargo.toml  package.json
server/src/: database_connection.rs  main.js  main.rs  router.rs  routes.js  sql.rs
server/src/adapters/MariadbAdapter/: MariadbAdapter.js  index.js
server/src/api/: api_routes.rs  images.js  mod.rs  static_route.rs  words.js  words_routes.rs
server/src/controllers/DockerController/: DockerController.js  index.js
server/src/controllers/WordsController/: WordsController.js
server/src/db/: connections.js
server/src/lib/: ResponseFactory.js  buildSQLFromPattern.js  dockerExecutor.js
server/src/lib/__tests__/: buildSQLFromPattern.test.js
server/src/models/: request.rs  response.rs
server/src/repositories/DockerRepository/: DockerRepository.js  index.js
server/src/repositories/WordsRepository/: WordsRepository.js  index.js
server/src/services/DockerService/: DockerService.js  index.js
server/src/services/WordsService/: WordsService.js  index.js
server/src/utils/: filter_unique_words.rs  init_tracing.rs  mod.rs  sql_builder.rs  uniq_words.rs  unique_letters.rs
src/: main.js  routes.js
temp_dist/: generate.js  index.html  (+1 more)
(+33 files in other folders)
