[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "fs"] }
dotenvy = "0.15.7"
sqlx = { version =  "0.8.5", features = ["runtime-tokio-rustls", "mysql", "macros"] }
serde = "1.0.219"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"